fixed console sizing on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3558,4 +3558,9 @@ main {
 
 	}
 
+	#console {
+		width: 100%;
+		height: 4rem;
+	}
+
 	}
